# quicksilver-template

./: Cargo.toml  README.md  index.html
src/: lib.rs  main.rs
