[package]
name = "{{project-name}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
quicksilver = "0.4.0-alpha0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
quicksilver = { version = "0.4.0-alpha0.7", features = ["web-sys"] }
wasm-bindgen = "0.2"
